fixed navbar covering post title in style.css

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   font-family: "Russo One", sans-serif;
   color: white;
   -webkit-text-stroke: 2px black;
+  margin-top: 100px;
 }
 
 .posts {
